--- a/app/src/main/res/layout-v14/activity_usera.xml
+++ b/app/src/main/res/layout-v14/activity_usera.xml
@@ -10,52 +10,11 @@
     android:background="@drawable/on"
     tools:context="com.example.wilbertdolce.simpleloginappb.Usera">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/second_page_text"
-        android:id="@+id/textView2"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/xText"
-        android:id="@+id/xText"
-        android:layout_below="@+id/textView2"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/yText"
-        android:id="@+id/yText"
-        android:layout_below="@+id/xText"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/zText"
-        android:id="@+id/zText"
-        android:layout_below="@+id/yText"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Door Open"
         android:id="@+id/button2"
-        android:layout_below="@+id/zText"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -93,5 +52,12 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Click for Motion Feature"
+        android:id="@+id/motion"
+        android:layout_above="@+id/button6" />
 
 </RelativeLayout>
