--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -15,85 +15,10 @@
 
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/login_text"
-        android:id="@+id/textView_login"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/username_text"
-        android:id="@+id/textView_username"
-        android:layout_below="@+id/textView_login"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="50dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/password_text"
-        android:id="@+id/textView_password"
-        android:layout_below="@+id/textView_username"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="10"
-        android:id="@+id/editText_user"
-        android:layout_above="@+id/editText_password"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:ems="10"
-        android:id="@+id/editText_password"
-        android:layout_below="@+id/textView_username"
-        android:layout_alignLeft="@+id/editText_user"
-        android:layout_alignStart="@+id/editText_user" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/atempts_text"
-        android:id="@+id/textView_attempts"
-        android:layout_below="@+id/editText_password"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/textView_attempts_Count"
-        android:layout_toEndOf="@+id/textView_login"
-        android:layout_alignTop="@+id/textView_attempts"
-        android:layout_alignLeft="@+id/editText_password"
-        android:layout_alignStart="@+id/editText_password"
-        android:layout_alignBottom="@+id/textView_attempts" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/button_text"
-        android:id="@+id/button_login"
-        android:layout_centerVertical="true"
-        android:layout_alignLeft="@+id/textView_attempts_Count"
-        android:layout_alignStart="@+id/textView_attempts_Count" />
+        android:id="@+id/textView_attempts_Count" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -101,10 +26,10 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Click Below for BLTH"
         android:id="@+id/textView"
-        android:layout_below="@+id/button_login"
+        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="47dp" />
+        android:layout_marginTop="62dp" />
 
     <Button
         android:layout_width="wrap_content"
@@ -119,7 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/listView"
-        android:layout_alignTop="@+id/textView"
+        android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/textView"
         android:layout_toEndOf="@+id/textView" />
 </RelativeLayout>
