--- a/app/src/main/res/layout-v14/activity_usera.xml
+++ b/app/src/main/res/layout-v14/activity_usera.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/on"
+    android:background="@drawable/locka"
     tools:context="com.example.wilbertdolce.simpleloginappb.Usera">
 
     <Button
