--- a/app/src/main/res/layout/activity_motion_option.xml
+++ b/app/src/main/res/layout/activity_motion_option.xml
@@ -70,4 +70,12 @@
         android:layout_below="@+id/textView5"
         android:layout_alignLeft="@+id/textView5"
         android:layout_alignStart="@+id/textView5" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Back to Regular Button"
+        android:id="@+id/reg"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
