--- a/app/src/main/res/layout-v14/activity_usera.xml
+++ b/app/src/main/res/layout-v14/activity_usera.xml
@@ -60,4 +60,23 @@
         android:id="@+id/motion"
         android:layout_above="@+id/button6" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Temperature:"
+        android:id="@+id/temper"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Get Temperature!!"
+        android:id="@+id/temp_btn"
+        android:layout_above="@+id/temper"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
